--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -68,5 +68,8 @@
     "phone":"联系电话",
     "email":"Email",
     "confirm":"确认"
+  },
+  "syserr":{
+    "10002":"没有找到提交的任务ID，可能因为浏览器缓存丢失，请重新选择任务提交。"
   }
 }
