--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -70,6 +70,7 @@
     "confirm":"确认"
   },
   "syserr":{
-    "10002":"没有找到提交的任务ID，可能因为浏览器缓存丢失，请重新选择任务提交。"
+    "10002":"没有找到提交的任务ID，可能因为浏览器缓存丢失，请重新选择任务提交。",
+    "10003":"该任务已经分配给其他用户了，请选择其他工作申请。"
   }
 }
