--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -4,6 +4,7 @@
     "myRPG":"我的RPG",
     "myTask":"我的私有任务",
     "rpgAdministrator":"RPG管理员",
+    "adminManger":"管理员设置",
     "matchJob":"匹配任务",
     "topUp":"充值",
     "appealSquare":"申诉广场",
@@ -71,6 +72,12 @@
   },
   "syserr":{
     "10002":"没有找到提交的任务ID，可能因为浏览器缓存丢失，请重新选择任务提交。",
-    "10003":"该任务已经分配给其他用户了，请选择其他工作申请。"
+    "10003":"该任务已经分配给其他用户了，请选择其他工作申请。",
+    "10004":"Token校验错误。",
+    "10005":"你要申请的任务并不存在，请重新选择任务。",
+    "10006":"你申请的任务已经被别人抢走了，请选择其他任务。",
+    "10007":"你已经申请过当前任务了，请耐心等待管理员处理。",
+    "10008":"你没有设置管理员用户的权限。",
+    "10009":"设置管理员权限失败。"
   }
 }
