--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -4,7 +4,7 @@
     "myRPG":"我的RPG",
     "myTask":"我的私有任务",
     "rpgAdministrator":"RPG管理员",
-    "adminManger":"管理员设置",
+    "adminManager":"管理员设置",
     "matchJob":"匹配任务",
     "topUp":"充值",
     "appealSquare":"申诉广场",
