--- a/src/language/english.json
+++ b/src/language/english.json
@@ -4,7 +4,7 @@
     "myRPG": "My RPG",
     "myTask":"My Task",
     "rpgAdministrator": "RPG Admin",
-    "adminManger":"Admin Manger",
+    "adminManager":"Admin Manger",
     "matchJob": "Match Jobs",
     "topUp": "Top Up",
     "appealSquare": "Appeal Square",
