--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -70,7 +70,8 @@
     "realName":"真实姓名",
     "phone":"联系电话",
     "email":"Email",
-    "confirm":"确认"
+    "confirm":"确认",
+    "update":"修改"
   },
   "syserr":{
     "10002":"没有找到提交的任务ID，可能因为浏览器缓存丢失，请重新选择任务提交。",
@@ -80,6 +81,7 @@
     "10006":"你申请的任务已经被别人抢走了，请选择其他任务。",
     "10007":"你已经申请过当前任务了，请耐心等待管理员处理。",
     "10008":"你没有设置管理员用户的权限。",
-    "10009":"设置管理员权限失败。"
+    "10009":"设置管理员权限失败。",
+    "10010":"保存用户信息错误"
   }
 }
