--- a/src/language/english.json
+++ b/src/language/english.json
@@ -70,7 +70,8 @@
     "realName":"Real Name",
     "phone":"Contact Phone",
     "email":"Email",
-    "confirm":"Confirm"
+    "confirm":"Confirm",
+    "update":"Update"
   },
   "syserr":{
     "10002":"It seems the job id has lost, please try to reload the job list, and try to apply this job again.",
@@ -80,6 +81,7 @@
     "10006":"The job you applied is contracted by other users, please apply another job.",
     "10007":"You have applied this job already, please waiting for the process.",
     "10008":"Sorry, you do not has the authority to authorize the administrator.",
-    "10009":"Something wrong when set the user to administrator."
+    "10009":"Something wrong when set the user to administrator.",
+    "10010":"Save profile information error."
   }
 }
