--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -5,6 +5,7 @@
     "myTask":"我的私有任务",
     "myProfile":"我的信息",
     "rpgAdministrator":"RPG管理员",
+    "rpgSecretary":"RPG秘书",
     "adminManager":"管理员设置",
     "matchJob":"匹配任务",
     "topUp":"充值",
