--- a/src/language/english.json
+++ b/src/language/english.json
@@ -5,6 +5,7 @@
     "myTask":"My Task",
     "myProfile":"My Profile",
     "rpgAdministrator": "RPG Admin",
+    "rpgSecretary":"RPG Secretary",
     "adminManager":"Admin Manger",
     "matchJob": "Match Jobs",
     "topUp": "Top Up",
