--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -72,7 +72,13 @@
     "phone":"联系电话",
     "email":"Email",
     "confirm":"确认",
-    "update":"修改"
+    "update":"修改",
+    "userId":"用户ID",
+    "registerTime":"注册时间"
+  },
+  "admin":{
+    "addAdmin":"添加管理员",
+    "addSecretary":"添加RPG秘书"
   },
   "syserr":{
     "10002":"没有找到提交的任务ID，可能因为浏览器缓存丢失，请重新选择任务提交。",
