--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -89,6 +89,7 @@
     "10007":"你已经申请过当前任务了，请耐心等待管理员处理。",
     "10008":"你没有设置管理员用户的权限。",
     "10009":"设置管理员权限失败。",
-    "10010":"保存用户信息错误"
+    "10010":"保存用户信息错误",
+    "10011":"分配任务失败"
   }
 }
