--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -78,7 +78,9 @@
   },
   "admin":{
     "addAdmin":"添加管理员",
-    "addSecretary":"添加RPG秘书"
+    "addSecretary":"添加RPG秘书",
+    "totalApplyUser":"总申请人数",
+    "match":"分配"
   },
   "syserr":{
     "10002":"没有找到提交的任务ID，可能因为浏览器缓存丢失，请重新选择任务提交。",
