--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -16,12 +16,16 @@
     "myJob":"我的工作",
     "newJob":"新工作",
     "partyA":"我是甲方",
-    "partyB":"我是乙方"
+    "partyB":"我是乙方",
+    "myAccount":"我的账户",
+    "myHonor":"我的荣誉",
+    "myApply":"我申请的工作"
   },
   "common":{
     "tipTitleQuestion":"提问",
     "ok":"确定",
-    "cancel":"取消"
+    "cancel":"取消",
+    "unRead":"未阅读"
   },
   "label":{
     "title":"标题",
@@ -63,7 +67,8 @@
     "price":"任务金额",
     "publish":"发布任务",
     "succPublish":"恭喜，发布任务成功！",
-    "errPublish":"抱歉，发布任务失败!"
+    "errPublish":"抱歉，发布任务失败!",
+    "checkPrice":"请输入正确的任务金额"
   },
   "job":{
     "title":"任务标题",
@@ -73,14 +78,19 @@
     "publishUserName":"任务发布者",
     "publishTime":"发布时间",
     "price":"任务报酬",
-    "apply":"申请任务"
+    "apply":"申请任务",
+    "applyUserNum":"申请人数",
+    "matchingUserNum":"分配人数"
+  },
+  "apply":{
+    "applyTime":"申请时间",
+    "readTime":"RPG秘书查看时间"
   },
   "jobMatchLog":{
     "matchTime":"工作分配时间",
     "processRemark":"处理意见",
     "processResult":"处理结果",
     "processTime":"处理时间"
-
   },
   "user":{
     "username":"用户名",
@@ -97,7 +107,8 @@
     "addSecretary":"添加RPG秘书",
     "totalApplyUser":"总申请人数",
     "match":"分配",
-    "tip1":"确定要分配给该用户吗？"
+    "tip1":"确定要分配给该用户吗？",
+    "roleType":"权限角色"
   },
   "syserr":{
     "10002":"没有找到提交的任务ID，可能因为浏览器缓存丢失，请重新选择任务提交。",
@@ -111,6 +122,35 @@
     "10010":"保存用户信息错误",
     "10011":"分配任务失败",
     "10012":"该任务已经分配给这个用户了，请等待用户处理",
-    "10013":"读取新任务失败"
+    "10013":"读取新任务失败",
+    "10014":"创建新用户失败",
+    "10015":"处理用户荣誉值失败",
+    "10016":"用户名重复",
+    "10017":"用户登录名不能为空",
+    "10018":"Email不存在",
+    "10019":"要操作的用户并不存在",
+    "10020":"你只登记了一个Email，不能删除。若要删除，请添加新的Email，并设置为默认。",
+    "10021":"该Email是默认Email，不能删除。若要删除，请将其他Email设置为默认。",
+    "10022":"发送认证邮件失败",
+    "10023":"验证Email失败",
+    "10024":"用户名或密码错误",
+    "10025":"登录失败",
+    "10026":"你提交的申请随着漂流瓶飘走了，我们还不知道它将飘向哪里，但这一定是一次伟大的冒险。",
+    "10027":"修改用户信息失败",
+    "10028":"读取用户信息失败",
+    "10029":"读取申请任务的用户失败",
+    "10030":"创建私有任务失败",
+    "10031":"读取私有任务失败",
+    "10032":"创建任务失败",
+    "10033":"申请任务失败",
+    "10034":"你没有RPG秘书权限",
+    "10035":"读取等待分配的任务失败",
+    "10036":"分配任务失败",
+    "10037":"你不能申请自己创建的任务",
+    "10038":"读取管理员信息错误",
+    "10039":"读取管理员权限错误",
+    "10040":"你没有RPG秘书权限"
+
+
   }
 }
