--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -153,6 +153,6 @@
     "10038":"读取管理员信息错误",
     "10039":"读取管理员权限错误",
     "10040":"你没有RPG秘书权限",
-    “”"10041":"接受新任务失败"
+    "10041":"接受新任务失败"
   }
 }
