--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -1,160 +1,170 @@
 {
-  "command":{
-    "createNewTask":"创建新项目",
-    "myRPG":"我的RPG",
-    "myTask":"我的私有任务",
-    "myProfile":"我的信息",
-    "rpgAdministrator":"RPG管理员",
-    "rpgSecretary":"RPG秘书",
-    "adminManager":"管理员设置",
-    "matchJob":"匹配任务",
-    "topUp":"充值",
-    "appealSquare":"申诉广场",
-    "signOut":"退出登录",
-    "settings":"设置",
-    "signIn":"登录",
-    "myJob":"我的工作",
-    "newJob":"新工作",
-    "partyA":"我是甲方",
-    "partyB":"我是乙方",
-    "myAccount":"我的账户",
-    "myHonor":"我的荣誉",
-    "myApply":"我申请的工作"
+  "command": {
+    "createNewTask": "创建新项目",
+    "myRPG": "我的RPG",
+    "myTask": "我的私有任务",
+    "myProfile": "我的信息",
+    "rpgAdministrator": "RPG管理员",
+    "rpgSecretary": "RPG秘书",
+    "adminManager": "管理员设置",
+    "matchJob": "匹配任务",
+    "topUp": "充值",
+    "appealSquare": "申诉广场",
+    "signOut": "退出登录",
+    "settings": "设置",
+    "signIn": "登录",
+    "myJob": "我的工作",
+    "newJob": "新工作",
+    "partyA": "我是甲方",
+    "partyB": "我是乙方",
+    "myAccount": "我的账户",
+    "myHonor": "我的荣誉",
+    "myApply": "我申请的工作"
   },
-  "common":{
-    "tipTitleQuestion":"提问",
-    "ok":"确定",
-    "cancel":"取消",
-    "unRead":"未阅读"
+  "common": {
+    "tipTitleQuestion": "提问",
+    "ok": "确定",
+    "cancel": "取消",
+    "unRead": "未阅读"
   },
-  "label":{
-    "title":"标题",
-    "days":"期限（天）",
-    "price":"价格"
+  "label": {
+    "title": "标题",
+    "days": "期限（天）",
+    "price": "价格"
   },
   "header": {
     "language": "语言"
   },
-  "register":{
-    "username":"用户名",
-    "usernamePlaceholder":"手机/Email",
-    "password":"登录密码",
-    "password2":"确认密码",
-    "passwordPlaceholder":"请输入登录密码",
-    "password2Placeholder":"请再次确认密码",
-    "register":"注册",
-    "err1":"两次输入的密码不一致",
-    "err2":"请输入用户名",
-    "err3":"用户名必须是Email格式",
-    "err4":"用户名或密码不正确",
-    "login":"登录"
+  "register": {
+    "username": "用户名",
+    "usernamePlaceholder": "手机/Email",
+    "password": "登录密码",
+    "password2": "确认密码",
+    "passwordPlaceholder": "请输入登录密码",
+    "password2Placeholder": "请再次确认密码",
+    "register": "注册",
+    "err1": "两次输入的密码不一致",
+    "err2": "请输入用户名",
+    "err3": "用户名必须是Email格式",
+    "err4": "用户名或密码不正确",
+    "login": "登录"
   },
-  "task":{
-    "title":"任务标题",
-    "code":"任务代号",
-    "detail":"任务详情",
-    "days":"任务期限（天）",
-    "create":"创建任务",
-    "err1":"创建任务失败",
-    "createdUserName":"创建人",
-    "createdTime":"创建时间",
-    "update":"修改",
-    "logs":"进度日志",
-    "subTask":"子任务",
-    "freelancer":"威客",
-    "complete":"完成",
-    "delete":"删除",
-    "price":"任务金额",
-    "publish":"发布任务",
-    "succPublish":"恭喜，发布任务成功！",
-    "errPublish":"抱歉，发布任务失败!",
-    "checkPrice":"请输入正确的任务金额"
+  "task": {
+    "title": "任务标题",
+    "code": "任务代号",
+    "detail": "任务详情",
+    "days": "任务期限（天）",
+    "create": "创建任务",
+    "err1": "创建任务失败",
+    "createdUserName": "创建人",
+    "createdTime": "创建时间",
+    "update": "修改",
+    "logs": "进度日志",
+    "subTask": "子任务",
+    "freelancer": "威客",
+    "complete": "完成",
+    "delete": "删除",
+    "price": "任务金额",
+    "publish": "发布任务",
+    "succPublish": "恭喜，发布任务成功！",
+    "errPublish": "抱歉，发布任务失败!",
+    "checkPrice": "请输入正确的任务金额"
   },
-  "job":{
-    "title":"任务标题",
-    "code":"项目代号",
-    "detail":"任务需求",
-    "days":"任务期限（天）",
-    "publishUserName":"任务发布者",
-    "publishTime":"发布时间",
-    "price":"任务报酬",
-    "apply":"申请任务",
-    "applyUserNum":"申请人数",
-    "matchingUserNum":"分配人数",
-    "btAcceptJob":"接受任务",
-    "btRejectJob":"拒绝任务",
-    "rejectJobRemark":"拒绝任务说明"
+  "job": {
+    "title": "任务标题",
+    "code": "项目代号",
+    "detail": "任务需求",
+    "days": "任务期限（天）",
+    "publishUserName": "任务发布者",
+    "publishTime": "发布时间",
+    "price": "任务报酬",
+    "apply": "申请任务",
+    "applyUserNum": "申请人数",
+    "matchingUserNum": "分配人数",
+    "btAcceptJob": "接受任务",
+    "btRejectJob": "拒绝任务",
+    "rejectJobRemark": "拒绝任务说明"
   },
-  "apply":{
-    "applyTime":"申请时间",
-    "readTime":"RPG秘书查看时间"
+  "apply": {
+    "applyTime": "申请时间",
+    "readTime": "RPG秘书查看时间"
   },
-  "jobMatchLog":{
-    "matchTime":"工作分配时间",
-    "processRemark":"处理意见",
-    "processResult":"处理结果",
-    "processTime":"处理时间"
+  "jobMatchLog": {
+    "matchTime": "工作分配时间",
+    "processRemark": "处理意见",
+    "processResult": "处理结果",
+    "processTime": "处理时间"
   },
-  "user":{
-    "username":"用户名",
-    "realName":"真实姓名",
-    "phone":"联系电话",
-    "email":"Email",
-    "confirm":"确认",
-    "update":"修改",
-    "userId":"用户ID",
-    "registerTime":"注册时间"
+  "user": {
+    "username": "用户名",
+    "realName": "真实姓名",
+    "phone": "联系电话",
+    "email": "Email",
+    "confirm": "确认",
+    "update": "修改",
+    "userId": "用户ID",
+    "registerTime": "注册时间"
   },
-  "admin":{
-    "addAdmin":"添加管理员",
-    "addSecretary":"添加RPG秘书",
-    "totalApplyUser":"总申请人数",
-    "match":"分配",
-    "tip1":"确定要分配给该用户吗？",
-    "roleType":"权限角色"
+  "admin": {
+    "addAdmin": "添加管理员",
+    "addSecretary": "添加RPG秘书",
+    "totalApplyUser": "总申请人数",
+    "match": "分配",
+    "tip1": "确定要分配给该用户吗？",
+    "roleType": "权限角色"
   },
-  "syserr":{
-    "10002":"没有找到提交的任务ID，可能因为浏览器缓存丢失，请重新选择任务提交。",
-    "10003":"该任务已经分配给其他用户了，请选择其他工作申请。",
-    "10004":"Token校验错误。",
-    "10005":"你要申请的任务并不存在，请重新选择任务。",
-    "10006":"你申请的任务已经被别人抢走了，请选择其他任务。",
-    "10007":"你已经申请过当前任务了，请耐心等待管理员处理。",
-    "10008":"你没有设置管理员用户的权限。",
-    "10009":"设置管理员权限失败。",
-    "10010":"保存用户信息错误",
-    "10011":"分配任务失败",
-    "10012":"该任务已经分配给这个用户了，请等待用户处理",
-    "10013":"读取新任务失败",
-    "10014":"创建新用户失败",
-    "10015":"处理用户荣誉值失败",
-    "10016":"用户名重复",
-    "10017":"用户登录名不能为空",
-    "10018":"Email不存在",
-    "10019":"要操作的用户并不存在",
-    "10020":"你只登记了一个Email，不能删除。若要删除，请添加新的Email，并设置为默认。",
-    "10021":"该Email是默认Email，不能删除。若要删除，请将其他Email设置为默认。",
-    "10022":"发送认证邮件失败",
-    "10023":"验证Email失败",
-    "10024":"用户名或密码错误",
-    "10025":"登录失败",
-    "10026":"你提交的申请随着漂流瓶飘走了，我们还不知道它将飘向哪里，但这一定是一次伟大的冒险。",
-    "10027":"修改用户信息失败",
-    "10028":"读取用户信息失败",
-    "10029":"读取申请任务的用户失败",
-    "10030":"创建私有任务失败",
-    "10031":"读取私有任务失败",
-    "10032":"创建任务失败",
-    "10033":"申请任务失败",
-    "10034":"你没有RPG秘书权限",
-    "10035":"读取等待分配的任务失败",
-    "10036":"分配任务失败",
-    "10037":"你不能申请自己创建的任务",
-    "10038":"读取管理员信息错误",
-    "10039":"读取管理员权限错误",
-    "10040":"你没有RPG秘书权限",
-    "10041":"接受新任务失败",
-    "10042":"更新账户记录错误",
-    "10043":"你没有足够的账户余额发布该任务，请充值后再发布。"
+  "secretary": {
+    "topUp": {
+      "topUpAmount": "充值金额",
+      "topUpUser": "用户",
+      "topUpTime": "提交时间",
+      "topUpRemark": "说明",
+      "accept": "审核通过",
+      "reject": "审核拒绝"
+    }
+  },
+  "syserr": {
+    "10002": "没有找到提交的任务ID，可能因为浏览器缓存丢失，请重新选择任务提交。",
+    "10003": "该任务已经分配给其他用户了，请选择其他工作申请。",
+    "10004": "Token校验错误。",
+    "10005": "你要申请的任务并不存在，请重新选择任务。",
+    "10006": "你申请的任务已经被别人抢走了，请选择其他任务。",
+    "10007": "你已经申请过当前任务了，请耐心等待管理员处理。",
+    "10008": "你没有设置管理员用户的权限。",
+    "10009": "设置管理员权限失败。",
+    "10010": "保存用户信息错误",
+    "10011": "分配任务失败",
+    "10012": "该任务已经分配给这个用户了，请等待用户处理",
+    "10013": "读取新任务失败",
+    "10014": "创建新用户失败",
+    "10015": "处理用户荣誉值失败",
+    "10016": "用户名重复",
+    "10017": "用户登录名不能为空",
+    "10018": "Email不存在",
+    "10019": "要操作的用户并不存在",
+    "10020": "你只登记了一个Email，不能删除。若要删除，请添加新的Email，并设置为默认。",
+    "10021": "该Email是默认Email，不能删除。若要删除，请将其他Email设置为默认。",
+    "10022": "发送认证邮件失败",
+    "10023": "验证Email失败",
+    "10024": "用户名或密码错误",
+    "10025": "登录失败",
+    "10026": "你提交的申请随着漂流瓶飘走了，我们还不知道它将飘向哪里，但这一定是一次伟大的冒险。",
+    "10027": "修改用户信息失败",
+    "10028": "读取用户信息失败",
+    "10029": "读取申请任务的用户失败",
+    "10030": "创建私有任务失败",
+    "10031": "读取私有任务失败",
+    "10032": "创建任务失败",
+    "10033": "申请任务失败",
+    "10034": "你没有RPG秘书权限",
+    "10035": "读取等待分配的任务失败",
+    "10036": "分配任务失败",
+    "10037": "你不能申请自己创建的任务",
+    "10038": "读取管理员信息错误",
+    "10039": "读取管理员权限错误",
+    "10040": "你没有RPG秘书权限",
+    "10041": "接受新任务失败",
+    "10042": "更新账户记录错误",
+    "10043": "你没有足够的账户余额发布该任务，请充值后再发布。"
   }
 }
