--- a/src/language/english.json
+++ b/src/language/english.json
@@ -114,6 +114,16 @@
     "tip1":"Are you sure to match this user?",
     "roleType":"Role Type"
   },
+  "secretary": {
+    "topUp": {
+      "topUpAmount": "Top Up Amount",
+      "topUpUser": "User",
+      "topUpTime": "Submit Time",
+      "topUpRemark": "Remark",
+      "accept": "Accept",
+      "reject": "Reject"
+    }
+  },
   "syserr":{
     "10002":"It seems the job id has lost, please try to reload the job list, and try to apply this job again.",
     "10003":"This job has been assigned to others already, please choose another job.",
