--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -166,5 +166,6 @@
     "10041": "接受新任务失败",
     "10042": "更新账户记录错误",
     "10043": "你没有足够的账户余额发布该任务，请充值后再发布。"
+    "10044":"该Email已被其他用户使用了。"
   }
 }
