--- a/src/language/english.json
+++ b/src/language/english.json
@@ -166,6 +166,7 @@
     "10040":"Sorry, you do not have the RPG secretary permission",
     "10041":"Accept new job failed",
     "10042":"Update user account error",
-    "10043":"You do not have enough balance to publish this job"
+    "10043":"You do not have enough balance to publish this job",
+    "10044":"This email has been occupied by other users."
   }
 }
