--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -165,7 +165,11 @@
     "10040": "你没有RPG秘书权限",
     "10041": "接受新任务失败",
     "10042": "更新账户记录错误",
-    "10043": "你没有足够的账户余额发布该任务，请充值后再发布。"
-    "10044":"该Email已被其他用户使用了。"
+    "10043": "你没有足够的账户余额发布该任务，请充值后再发布。",
+    "10044":"该Email已被其他用户使用了。",
+    "10045":"更新用户手机号码失败。",
+    "10046":"这个手机号码已经被其他用户使用了。",
+    "10047":"保存用户实名失败。",
+    "10048":"保存用户联系信息失败。"
   }
 }
