--- a/src/language/english.json
+++ b/src/language/english.json
@@ -167,6 +167,10 @@
     "10041":"Accept new job failed",
     "10042":"Update user account error",
     "10043":"You do not have enough balance to publish this job",
-    "10044":"This email has been occupied by other users."
+    "10044":"This email has been occupied by other users.",
+    "10045":"Update user phone failed.",
+    "10046":"This phone has been occupied by other users.",
+    "10047":"Save user real name failed.",
+    "10048":"Save user contact information error."
   }
 }
