--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -170,6 +170,7 @@
     "10045":"更新用户手机号码失败。",
     "10046":"这个手机号码已经被其他用户使用了。",
     "10047":"保存用户实名失败。",
-    "10048":"保存用户联系信息失败。"
+    "10048":"保存用户联系信息失败。",
+    "10049":"RPG秘书已经把该任务分配给你了，请在我的新任务里处理。"
   }
 }
