--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -19,7 +19,8 @@
     "partyB": "我是乙方",
     "myAccount": "我的账户",
     "myHonor": "我的荣誉",
-    "myApply": "我申请的工作"
+    "myApply": "我申请的工作",
+    "myMatch":"分配给我的任务"
   },
   "common": {
     "tipTitleQuestion": "提问",
@@ -171,6 +172,7 @@
     "10046":"这个手机号码已经被其他用户使用了。",
     "10047":"保存用户实名失败。",
     "10048":"保存用户联系信息失败。",
-    "10049":"RPG秘书已经把该任务分配给你了，请在我的新任务里处理。"
+    "10049":"RPG秘书已经把该任务分配给你了，请在我的新任务里处理。",
+    "10050":"拒绝新任务失败"
   }
 }
