--- a/src/language/english.json
+++ b/src/language/english.json
@@ -19,7 +19,8 @@
     "partyB":"PartyB",
     "myAccount":"My Account",
     "myHonor":"My Honor",
-    "myApply":"My Applied Job"
+    "myApply":"My Applied Job",
+    "myMatch":"My New Job"
   },
   "common":{
     "tipTitleQuestion":"Question",
@@ -172,8 +173,8 @@
     "10046":"This phone has been occupied by other users.",
     "10047":"Save user real name failed.",
     "10048":"Save user contact information error.",
-    "10049":"RPG Secretary has assigned this job to you already."
-
+    "10049":"RPG Secretary has assigned this job to you already.",
+    "10050":"Reject job failed."
 
   }
 }
