--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -94,7 +94,10 @@
     "matchTime": "工作分配时间",
     "processRemark": "处理意见",
     "processResult": "处理结果",
-    "processTime": "处理时间"
+    "processTime": "处理时间",
+    "tipReject":"你要拒绝该任务吗？",
+    "tipAccept":"确定要接受该任务吗？",
+    "rejectRemark":"请说明你拒绝该任务的理由"
   },
   "user": {
     "username": "用户名",
@@ -173,6 +176,7 @@
     "10047":"保存用户实名失败。",
     "10048":"保存用户联系信息失败。",
     "10049":"RPG秘书已经把该任务分配给你了，请在我的新任务里处理。",
-    "10050":"拒绝新任务失败"
+    "10050":"拒绝新任务失败",
+    "10051":"获取我的任务失败"
   }
 }
