--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -173,6 +173,7 @@
     "10047":"保存用户实名失败。",
     "10048":"保存用户联系信息失败。",
     "10049":"RPG秘书已经把该任务分配给你了，请在我的新任务里处理。",
-    "10050":"拒绝新任务失败"
+    "10050":"拒绝新任务失败",
+    "10051":"创建工作日志失败"
   }
 }
