--- a/src/language/english.json
+++ b/src/language/english.json
@@ -174,7 +174,8 @@
     "10047":"Save user real name failed.",
     "10048":"Save user contact information error.",
     "10049":"RPG Secretary has assigned this job to you already.",
-    "10050":"Reject job failed."
+    "10050":"Reject job failed.",
+    "10051":"Create job log failed"
 
   }
 }
