--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -177,6 +177,11 @@
     "10048":"保存用户联系信息失败。",
     "10049":"RPG秘书已经把该任务分配给你了，请在我的新任务里处理。",
     "10050":"拒绝新任务失败",
-    "10051":"获取我的任务失败"
+    "10051":"获取我的任务失败",
+    "10052":"创建任务日志失败",
+    "10053":"修改任务日志失败",
+    "10054":"获取任务日志失败",
+    "10055":"设置日志阅读时间错误"
+
   }
 }
