--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -115,6 +115,12 @@
     "createdTime":"创建时间",
     "readTime":"对方阅读时间"
   },
+  "jobComplete":{
+    "content":"完成说明",
+    "create":"创建验收日志",
+    "createdTime":"创建时间",
+    "readTime":"对方阅读时间"
+  },
   "user": {
     "username": "用户名",
     "realName": "真实姓名",
@@ -197,7 +203,12 @@
     "10052":"创建任务日志失败",
     "10053":"修改任务日志失败",
     "10054":"获取任务日志失败",
-    "10055":"设置日志阅读时间错误"
+    "10055":"设置日志阅读时间错误",
+    "10056":"获取验收日志失败",
+    "10057":"创建验收日志失败",
+    "10058":"设置验收日志的阅读时间错误",
+    "10059":"修改验收日志错误"
+
 
   }
 }
