--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -119,7 +119,11 @@
     "content":"完成说明",
     "create":"创建验收日志",
     "createdTime":"创建时间",
-    "readTime":"对方阅读时间"
+    "readTime":"对方阅读时间",
+    "reject":"拒绝验收",
+    "accept":"验收通过",
+    "rejectRemark":"拒绝验收说明",
+    "acceptRemark":"通过验收说明"
   },
   "user": {
     "username": "用户名",
@@ -207,7 +211,10 @@
     "10056":"获取验收日志失败",
     "10057":"创建验收日志失败",
     "10058":"设置验收日志的阅读时间错误",
-    "10059":"修改验收日志错误"
+    "10059":"修改验收日志错误",
+    "10060":"拒绝验收处理失败",
+    "10061":"验收通过处理失败",
+    "10062":"保存荣誉值失败"
 
 
   }
