--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -214,7 +214,8 @@
     "10059":"修改验收日志错误",
     "10060":"拒绝验收处理失败",
     "10061":"验收通过处理失败",
-    "10062":"保存荣誉值失败"
+    "10062":"保存荣誉值失败",
+    "10063":"该任务已经验收通过，不能重复验收"
 
 
   }
