--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -125,6 +125,16 @@
     "rejectRemark":"拒绝验收说明",
     "acceptRemark":"通过验收说明"
   },
+  "jobStop":{
+    "content":"终止说明",
+    "create":"提议终止",
+    "createdTime":"创建时间",
+    "readTime":"对方阅读时间",
+    "reject":"拒绝终止申请",
+    "accept":"同意终止",
+    "rejectRemark":"拒绝终止说明",
+    "acceptRemark":"通过终止说明"
+  },
   "user": {
     "username": "用户名",
     "realName": "真实姓名",
@@ -215,7 +225,16 @@
     "10060":"拒绝验收处理失败",
     "10061":"验收通过处理失败",
     "10062":"保存荣誉值失败",
-    "10063":"该任务已经验收通过，不能重复验收"
+    "10063":"该任务已经验收通过，不能重复验收",
+    "10064":"创建终止任务申请失败",
+    "10065":"读取终止任务申请失败",
+    "10066":"设置终止任务的阅读时间失败",
+    "10067":"处理拒绝终止任务失败",
+    "10068":"处理同意终止任务失败",
+    "10069":"你上次创建的终止申请还未被处理，所以不能重复申请",
+    "10070":"该任务已经验收通过了，还要怎样终止呢？",
+    "10071":"非进行过程中的任务不能被终止",
+    "10072":"保存终止申请失败"
 
 
   }
