--- a/src/language/english.json
+++ b/src/language/english.json
@@ -26,7 +26,8 @@
     "tipTitleQuestion":"Question",
     "ok":"Ok",
     "cancel":"Cancel",
-    "unRead":"Unread"
+    "unRead":"Unread",
+    "submit":"Submit"
   },
   "label": {
     "title": "Title",
@@ -132,7 +133,11 @@
     "reject":"Reject Stop",
     "accept":"Accept Stop",
     "rejectRemark":"Reject describe",
-    "acceptRemark":"Accept describe"
+    "acceptRemark":"Accept describe",
+    "refund":"Refund job price",
+    "processResult": "Process result",
+    "processTime": "Process time",
+    "processUserName":"Process user"
   },
   "user":{
     "username":"Username",
@@ -233,7 +238,10 @@
     "10069":"You cannot create new stop application since you already have a stop application for this job",
     "10070":"This job has been accepted already, cannot stop anymore!",
     "10071":"Job is not in progress, cannot stop",
-    "10072":"Update job stop application failed"
+    "10072":"Update job stop application failed",
+    "10073":"Reject stop successful",
+    "10074":"You cannot approve the stop created by yourself!",
+    "10075":"This job has been stopped successful"
 
   }
 }
